LogProject/templates/Magic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic-deployment
  labels:
    owner: szabi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: magic
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: magic
    spec:
      containers:
      - name: magic
        image: digitsy/kafka-magic
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: magic-service
  labels:
    owner: szabi
spec:
  selector:
    name: magic
  ports:
  - name: http
    port: 80
  type: ClusterIP
